--- a/app/src/main/res/layout/activity_room_home.xml
+++ b/app/src/main/res/layout/activity_room_home.xml
@@ -3,6 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/addTask"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add Task"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_below="@id/listViewCompleted" />
     <ListView
         android:id="@+id/listViewToDo"
         android:layout_width="match_parent"
@@ -23,10 +33,13 @@
 
     <ListView
         android:id="@+id/listViewCompleted"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/divider"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="#c0c0c0" />
 
 </RelativeLayout>
