--- a/app/src/main/res/drawable/roundcorner2.xml
+++ b/app/src/main/res/drawable/roundcorner2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#253444" />
+    <solid android:color="#A9A9A9" />
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
