--- a/app/src/main/res/layout/list_item2.xml
+++ b/app/src/main/res/layout/list_item2.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_corners"
+    android:background="@drawable/roundcorner2"
     android:padding="10dp">
 
     <TextView
