--- a/app/src/main/res/layout/activity_room_home.xml
+++ b/app/src/main/res/layout/activity_room_home.xml
@@ -64,6 +64,8 @@
         android:text="Submit"
         android:layout_below="@id/listViewCompleted"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#253444"/>
+
 
 </RelativeLayout>
