--- a/app/src/main/res/layout/activity_room_home.xml
+++ b/app/src/main/res/layout/activity_room_home.xml
@@ -66,6 +66,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:backgroundTint="#253444"/>
-
+    <Button
+        android:id="@+id/backButt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/addTask"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Go Back to Home Menu"
+        android:textColorLink="#253444"
+        android:backgroundTint="#253444"/>
 
 </RelativeLayout>
