--- a/app/src/main/res/layout/activity_room_home.xml
+++ b/app/src/main/res/layout/activity_room_home.xml
@@ -61,7 +61,7 @@
         android:id="@+id/btnToggleCompletion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Delete Tasks"
         android:layout_below="@id/listViewCompleted"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
